# findoc-rag

./: .env.example  .gitignore  README.md  hello_llm.py  pyproject.toml
app/rag/: chunk.py  embed.py  retriever.py  store.py
app/rag/parse/: __init__.py  mineru_adapter.py  models.py  quick_text.py  tables.py
doc/: decisions.md  parser_compare.md
scripts/: compare_tables.py  embed_and_load.py  inspect_chunks.py  milvus_lite_hello.py  sample_chunks.py  try_chunk.py  try_embedding.py  try_fixed.py  try_parse.py
tests/: test_35d.py  test_parse.py
