[project]
name = "findoc-rag"
version = "0.1.0"
description = "FinDoc Agent — 金融公告问答智能体(Agentic RAG:检索/引用溯源/拒答/工具调用)"
requires-python = ">=3.11"
dependencies = [
    "fastapi",
    "uvicorn[standard]",
    "httpx",
    "pydantic",
    "pydantic-settings",
    "python-dotenv",
    "openai",  # hello_llm.py 依赖(OpenAI 兼容接口调 DeepSeek/Qwen)
    # RAG / 向量库(按周逐步加,先留占位)
    # "pymilvus",
    # "llama-index",
    # "langchain", "langgraph",
    # "langfuse",
]

[dependency-groups]
dev = ["pytest", "ruff", "mypy"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.mypy]
python_version = "3.11"
ignore_missing_imports = true
